minor fixes on rendering score

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Rock Paper Scissors</h1>
 
     <div id="results"></div>
+    <div id="current-score"></div>
 
     <ul class="selections">
         <li id="rock" value="rock">rock</li>
