add more styles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="finalresult"></div>
 
             <div class="btn">
-                <button id="btn">Reset</button>
+                <button id="btn">RESET</button>
             </div>
         </div>
     </div>
