add footer and readme

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             </div>
         </div>
     </div>
+    <footer>
+            built & designed by 
+            <img src="./img/github-logo.png" alt="github-logo">
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/maximkwski">maximkwski</a>
+    </footer>
 
 </body>
 </html>
